# terminal

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.kiro/specs/terminal-plugin/: design.md  requirements.md  tasks.md
docs/: IMPLEMENTATION_PLAN.md
plugin/: config.json  plugin.json
scripts/: build-local.sh  package-plugin.sh
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml
src-tauri/proptest-regressions/pty/: local.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pty/: local.rs  manager.rs  mod.rs  output.rs  session.rs
src-tauri/src/rpc/: methods.rs  mod.rs  server.rs  types.rs
src-tauri/src/shell/: detect.rs  mod.rs  osc.rs
src-tauri/src/ssh/: auth.rs  client.rs  mod.rs  session.rs
src-tauri/src/utils/: error.rs  mod.rs  state.rs
src/components/: README.md
src/components/Dialogs/: NewConnectionDialog.tsx  README.md  index.ts
src/components/Search/: README.md  SearchBar.tsx  index.ts
src/components/Terminal/: Terminal.tsx  TerminalTabs.tsx  TerminalView.tsx  index.tsx
src/hooks/: useRpc.ts  useTerminal.ts
src/lib/: README.md  rpc-client.ts  rpc-context.tsx  termwrap.ts  theme.ts
src/store/: README.md  index.ts  session-store.ts
src/types/: index.ts  plugin-components.d.ts  proxycast-plugin-components.d.ts  rpc.ts  terminal.ts
